--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-photo-album": "^3.0.0",
+    "react-photo-view": "^1.2.6",
     "react-typed": "^2.0.12",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
